    Support Forum: http://forum.darkbot.org
    *******************************************************

Darkbot 8rc2: Apr 19, 2006
	- Fine tuned what commands can be done where.  In particular
	  any password related commands can only be done in private 
	  now.
	- Made some commands behave consistantly no matter where they 
	  are invoked from.

Darkbot 8rc2: Apr 16, 2006
	- Rewrote chansrv.c to use an array of pointers instead
	  of a huge if-else-if.
	- Added patch from nak that stops ops from kicking 
	  themselves via a topic kick.
	- Added HELP <command>.
	- Added isop <nick>.
	- Added level <nick>.

Darkbot 8rc2: Mar 09, 2006
	- Added !WEATHER <zipcode> command. 

Darkbot 8rc2: Nov 07, 2005
	- Fixed spelling errors, the word 'queue' was mispelled
	  throughout the code and in comments.
	- I apparently broke show_banlist() a few releases back 
	  trying to eliminate a type conversion warning, so it's
	  fixed again.
	- B~ (bot nickname) variable can now be used in perform.ini
	- OS command now works on windows.
	- Fixed google command. A search string used to determine
	  successful replies was changed by google.
	- Changed "ugly" message responses.
	- Restart and rehash commands should now work on all operating
	  systems, including Windows.

Darkbot 8rc1: Mar 04, 2005
	- Removed an unneeded line in main.c, that was used to "hide"
	  warnings on WIN32, which is a very bad idea.
	- Changed check_dbtimers() so it ignores the CVS directory,
	  which contains information for the CVS server.  This
	  fixes a situation that seems to have only presented itself
	  in FreeBSD, where it thinks the CVS directory is a 
	  timer, and sends out random garble every few seconds.
	
	- configure.ac and source/Makefile.am; very minor updates.

	- Fixed randq, which I accidentally broke when adding the
	  -I switch. This also fixes some problems that turned up
	  on FreeBSD.

	- Fixed a warning that came up in permbans.c about mixing 