@@ -10,6 +10,8 @@ Darkbot 8rc2: Apr 19, 2006
 	  now.
 	- Made some commands behave consistantly no matter where they 
 	  are invoked from.
+	- Added HELP COMMANDS.
+	- Don't try to send oversize messages, split at a space.
 
 Darkbot 8rc2: Apr 16, 2006
 	- Rewrote chansrv.c to use an array of pointers instead
